; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_davinci_emac.c_emac_mii_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_davinci_emac.c_emac_mii_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mii_bus = type { i32 }

@emac_bus_frequency = common dso_local global i32 0, align 4
@mdio_max_freq = common dso_local global i32 0, align 4
@MDIO_CONTROL_CLKDIV = common dso_local global i32 0, align 4
@MDIO_CONTROL = common dso_local global i32 0, align 4
@MDIO_CONTROL_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mii_bus*)* @emac_mii_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @emac_mii_reset(%struct.mii_bus* %0) #0 {
  %2 = alloca %struct.mii_bus*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.mii_bus* %0, %struct.mii_bus** %2, align 8
  %5 = load i32, i32* @emac_bus_frequency, align 4
  store i32 %5, i32* %4, align 4
  %6 = load i32, i32* @mdio_max_freq, align 4
  %7 = load i32, i32* %4, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @mdio_max_freq, align 4
  %13 = sdiv i32 %11, %12
  %14 = sub nsw i32 %13, 1
  store i32 %14, i32* %3, align 4
  br label %16

15:                                               ; preds = %1
  store i32 255, i32* %3, align 4
  br label %16

16:                                               ; preds = %15, %10
  %17 = load i32, i32* @MDIO_CONTROL_CLKDIV, align 4
  %18 = load i32, i32* %3, align 4
  %19 = and i32 %18, %17
  store i32 %19, i32* %3, align 4
  %20 = load i32, i32* @MDIO_CONTROL, align 4
  %21 = load i32, i32* %3, align 4
  %22 = load i32, i32* @MDIO_CONTROL_ENABLE, align 4
  %23 = or i32 %21, %22
  %24 = call i32 @emac_mdio_write(i32 %20, i32 %23)
  ret i32 0
}

declare dso_local i32 @emac_mdio_write(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
